# rssa

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  ToDo.txt  cleanup  configure  configure.ac  configure.win
R/: Lcov.R  autossa.R  cadzow.R  capabilities.R  chankel.R  common.R  eossa.R  extmat.R  fftplan.R  forecast.R  gapfill.R  hankel.R  hbhankel.R  hmatmul.R  hmatr.R  igapfill.R  init.R.in  mhankel.R  ossa.R  parest.R  perest.R  plot.R  plot2.R  plotn.R  propack_svd.R  pssa.R  sh2dssa.R  ssa-lazy.R  ssa.R  toeplitz.R  trlan.R  trlan_svd.R  wcor.R  wossa.R
data/: AustralianWine.rda  Barbara.rda  Mars.rda  MotorVehicle.rda  USUnemployment.rda
inst/: CITATION
inst/extdata/: 1dssa.testdata.rda  2dssa.testdata.rda  common.test.methods.R  gentest-1dssa.R  gentest-2dssa.R  gentest-mssa.R  gentest-pssa.R  gentest-toeplitz.R  gentest-wcor.2d.ssa.R  mssa-speedtest.R  mssa.batching.R  mssa.speedtest.R  mssa.testdata.rda  pssa.testdata.rda  toeplitz.testdata.rda  wcor.2dssa.testdata.rda
inst/tests/: test-1dssa.R  test-2dssa.R  test-cadzow.R  test-circular1d.R  test-circular2d.R  (+15 more)
man/: AustralianWhite.Rd  AustralianWine.Rd  Barbara.rd  Mars.Rd  MotorVehicle.Rd  Rssa-package.Rd  USUnemployment.Rd  autossa.Rd  basis2lpf.Rd  bforecast.Rd  cadzow.Rd  calcv.Rd  cleanup.Rd  clone.Rd  clplot.Rd  clusterify.Rd  convolven.Rd  decompose.Rd  eossa.Rd  forecast.Rd  fossa.Rd  frobenius.cor.Rd  fssa.Rd  gapfill.Rd  genwcor.Rd  grouping.auto.Rd  hankel.Rd  hbhankel.Rd  hmatr.Rd  igapfill.Rd  iossa.Rd  iossa.result.Rd  lrf-routines.Rd  lrf.Rd  lrr-routines.Rd  lrr.Rd  new.Rd  owcor.Rd  parest.Rd  perest.Rd  (+17 more)
src/: Lcov.c  Makevars  Makevars.in  Rssa_init.c  config.h.in  config.h.win  extmat.c  extmat.h  fft_plan.c  fft_plan.h  hankel.c  hankel.h  hbhankel.c  hmatmul.c  masks.c  masks.h  printstat.f  propack_svd.c  second.f  ssa.c  toeplitz.c
tests/: test-all.R  testthat.R
(+36 files in other folders)
